fix: timeline on team

--- a/src/app/components/team/team.html
+++ b/src/app/components/team/team.html
@@ -1,121 +1,144 @@
 <div class="space-y-16">
-  <section class="text-center bg-gray-900 py-10">
-    <h2 class="text-4xl font-bold m-0 text-white">Nuestra Historia</h2>
-    <ul
-      class="timeline inline-flex timeline-vertical lg:-mt-24 lg:timeline-horizontal p-8 rounded-lg"
-    >
-      <li>
-        <div class="timeline-start text-blue-300">2022</div>
-        <div class="timeline-middle">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="h-5 w-5 text-blue-300"
+  <!-- Sección de Historia -->
+  <section class="text-center bg-gray-900 py-10 px-4 sm:px-6">
+    <h2 class="text-3xl sm:text-4xl font-bold m-0 text-white">
+      Nuestra Historia
+    </h2>
+    <div class="overflow-x-auto">
+      <ul
+        class="timeline timeline-vertical lg:timeline-horizontal p-4 sm:p-8 rounded-lg mx-auto w-fit"
+      >
+        <li>
+          <div class="timeline-start text-blue-300 text-sm sm:text-base">
+            2022
+          </div>
+          <div class="timeline-middle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              class="h-5 w-5 text-blue-300"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          <div
+            class="timeline-end timeline-box prose w-40 sm:w-60 bg-gray-800 text-blue-100"
           >
-            <path
-              fill-rule="evenodd"
-              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-        <div
-          class="timeline-end timeline-box prose w-60 bg-gray-800 text-blue-100"
-        >
-          <p class="text-sm">
-            Mientras estudiabamos en la Universidad de las Fuerzas Armadas ESPE,
-            los fundadores de Saint Roche Microsystems se conocieron y
-            comenzaron a colaborar en proyectos de software.
-          </p>
-        </div>
-        <hr class="bg-blue-400" />
-      </li>
-      <li>
-        <hr class="bg-blue-400" />
-        <div class="timeline-start text-blue-300">2025</div>
-        <div class="timeline-middle">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="h-5 w-5 text-blue-300"
+            <p class="text-xs sm:text-sm">
+              Mientras estudiabamos en la Universidad de las Fuerzas Armadas
+              ESPE, los fundadores de Saint Roche Microsystems se conocieron y
+              comenzaron a colaborar en proyectos de software.
+            </p>
+          </div>
+          <hr class="bg-blue-400" />
+        </li>
+        <li>
+          <hr class="bg-blue-400" />
+          <div class="timeline-start text-blue-300 text-sm sm:text-base">
+            2025
+          </div>
+          <div class="timeline-middle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              class="h-5 w-5 text-blue-300"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          <div
+            class="timeline-end timeline-box w-40 sm:w-60 bg-gray-800 text-blue-100"
           >
-            <path
-              fill-rule="evenodd"
-              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-        <div class="timeline-end timeline-box w-60 bg-gray-800 text-blue-100">
-          <p class="text-sm">
-            En 2025, Saint Roche Microsystems se estableció oficialmente como
-            una empresa de desarrollo de software, enfocándose en crear
-            soluciones innovadoras y accesibles para empresas y desarrolladores.
-          </p>
-        </div>
-        <hr class="bg-blue-400" />
-      </li>
-      <li>
-        <hr class="bg-blue-400" />
-        <div class="timeline-start text-blue-300">2027</div>
-        <div class="timeline-middle">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="h-5 w-5 text-blue-300"
+            <p class="text-xs sm:text-sm">
+              En 2025, Saint Roche Microsystems se estableció oficialmente como
+              una empresa de desarrollo de software, enfocándose en crear
+              soluciones innovadoras y accesibles para empresas y
+              desarrolladores.
+            </p>
+          </div>
+          <hr class="bg-blue-400" />
+        </li>
+        <li>
+          <hr class="bg-blue-400" />
+          <div class="timeline-start text-blue-300 text-sm sm:text-base">
+            2027
+          </div>
+          <div class="timeline-middle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              class="h-5 w-5 text-blue-300"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          <div
+            class="w-40 sm:w-60 timeline-end timeline-box bg-gray-800 text-blue-100"
           >
-            <path
-              fill-rule="evenodd"
-              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-        <div class="w-60 timeline-end timeline-box bg-gray-800 text-blue-100">
-          <p class="text-sm">
-            En 2027, la empresa creció y se expandió, lanzando varios productos
-            exitosos y estableciendo una sólida reputación en la industria del
-            software.
-          </p>
-        </div>
-        <hr class="bg-blue-400" />
-      </li>
-      <li>
-        <hr class="bg-blue-400" />
-        <div class="timeline-start text-blue-300">2030</div>
-        <div class="timeline-middle">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="h-5 w-5 text-blue-300"
+            <p class="text-xs sm:text-sm">
+              En 2027, la empresa creció y se expandió, lanzando varios
+              productos exitosos y estableciendo una sólida reputación en la
+              industria del software.
+            </p>
+          </div>
+          <hr class="bg-blue-400" />
+        </li>
+        <li>
+          <hr class="bg-blue-400" />
+          <div class="timeline-start text-blue-300 text-sm sm:text-base">
+            2030
+          </div>
+          <div class="timeline-middle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              class="h-5 w-5 text-blue-300"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          <div
+            class="timeline-end timeline-box w-40 sm:w-60 bg-gray-800 text-blue-100"
           >
-            <path
-              fill-rule="evenodd"
-              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-        <div class="timeline-end timeline-box w-60 bg-gray-800 text-blue-100">
-          <p class="text-sm">
-            En 2030, Saint Roche Microsystems se posicionó como un líder en el
-            desarrollo de software, con un equipo talentoso y una visión clara
-            para el futuro.
-          </p>
-        </div>
-      </li>
-    </ul>
+            <p class="text-xs sm:text-sm">
+              En 2030, Saint Roche Microsystems se posicionó como un líder en el
+              desarrollo de software, con un equipo talentoso y una visión clara
+              para el futuro.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </section>
 
-  <h2 class="text-4xl font-bold text-center mb-12">Conoce al Team</h2>
+  <!-- Sección del Equipo -->
+  <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 sm:mb-12 px-4">
+    Conoce al Team
+  </h2>
   <section
-    class="container mx-auto px-20 my-8 grid grid-cols-1 md:grid-cols-2 justify-between gap-10"
+    class="container mx-auto px-4 sm:px-6 lg:px-20 my-8 grid grid-cols-1 lg:grid-cols-2 justify-between gap-6 sm:gap-10"
   >
-    <div class="grid gap-8 grid-cols-1">
+    <div class="grid gap-6 sm:gap-8 grid-cols-1 order-2 lg:order-1">
       <app-member
         *ngFor="let member of teamMembers"
         name="{{ member.name }}"
@@ -123,8 +146,12 @@
         [skills]="member.skills"
       ></app-member>
     </div>
-    <div class="card bg-base-100 h-fit">
-      <img src="team.png" alt="" class="" srcset="" />
+    <div class="card bg-base-100 h-fit order-1 lg:order-2">
+      <img
+        src="team.png"
+        alt="Equipo Saint Roche Microsystems"
+        class="w-full h-auto rounded-lg shadow-md"
+      />
     </div>
   </section>
 </div>
