feat: animation on home page

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,5 @@
 <div class="container my-10 md:my-20 mx-auto px-4 sm:px-6 lg:px-8">
-  <div class="hero">
+  <div data-aos="fade-up" data-aos-duration="2000" class="hero">
     <div class="hero-content flex-col lg:flex-row-reverse">
       <img src="pc2.png" class="w-2/3 md:max-w-sm rounded-lg shadow-2xl" />
       <div class="mt-6 lg:mt-0 lg:mr-8">
@@ -23,6 +23,8 @@
   </div>
 
   <div
+    data-aos="fade-up"
+    data-aos-duration="2000"
     class="grid grid-cols-1 md:grid-cols-2 px-4 sm:px-8 lg:px-16 xl:px-32 my-8 md:my-10 gap-6"
   >
     <h3
@@ -78,7 +80,7 @@
 
   <div class="divider divider-primary"></div>
 
-  <div>
+  <div data-aos="fade-up" data-aos-duration="2000">
     <h3 class="text-2xl sm:text-3xl font-semibold my-8 md:my-10 text-center">
       Siempre activos
     </h3>
