feat: scrolling animation on all pages

--- a/src/app/components/contact-us/contact-us.html
+++ b/src/app/components/contact-us/contact-us.html
@@ -1,5 +1,4 @@
-<div class="relative">
-  <!-- Main content container -->
+<div data-aos="fade-in" data-aos-duration="1000" class="relative">
   <div class="bg-primary pt-12 pb-16 lg:pb-24 lg:pr-[33%]">
     <div class="container mx-auto">
       <section class="text-white px-10 max-w-3xl">
