--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,5 @@
-<div class="container my-10 md:my-20 mx-auto px-4 sm:px-6 lg:px-8">
-  <div data-aos="fade-up" data-aos-duration="2000" class="hero">
+<div data-aos="fade-in" data-aos-duration="1000" class="container my-10 md:my-20 mx-auto px-4 sm:px-6 lg:px-8">
+  <div data-aos="fade-up" data-aos-duration="1000" class="hero">
     <div class="hero-content flex-col lg:flex-row-reverse">
       <img src="pc2.png" class="w-2/3 md:max-w-sm rounded-lg shadow-2xl" />
       <div class="mt-6 lg:mt-0 lg:mr-8">
