--- a/src/app/components/team/team.html
+++ b/src/app/components/team/team.html
@@ -1,4 +1,4 @@
-<div class="space-y-16">
+<div data-aos="fade-in" data-aos-duration="1000" class="space-y-16">
   <!-- Sección de Historia -->
   <section class="text-center bg-gray-900 py-10 px-4 sm:px-6">
     <h2 class="text-3xl sm:text-4xl font-bold m-0 text-white">
@@ -136,6 +136,8 @@
     Conoce al Team
   </h2>
   <section
+    data-aos="fade-up"
+    data-aos-duration="1000"
     class="container mx-auto px-4 sm:px-6 lg:px-20 my-8 grid grid-cols-1 lg:grid-cols-2 justify-between gap-6 sm:gap-10"
   >
     <div class="grid gap-6 sm:gap-8 grid-cols-1 order-2 lg:order-1">
