--- a/src/app/components/about-us/about-us.html
+++ b/src/app/components/about-us/about-us.html
@@ -2,7 +2,7 @@
   <div
     class="hero min-h-[50vh] bg-base-200"
     style="
-      background-image: url('bg.png');
+      background-image: url('bg-home.jpeg');
       background-size: cover;
       background-position: center;
     "
