--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,4 +1,8 @@
-<div data-aos="fade-in" data-aos-duration="1000" class="container my-10 md:my-20 mx-auto px-4 sm:px-6 lg:px-8">
+<div
+  data-aos="fade-in"
+  data-aos-duration="1000"
+  class="container my-10 md:my-20 mx-auto px-4 sm:px-6 lg:px-8"
+>
   <div data-aos="fade-up" data-aos-duration="1000" class="hero">
     <div class="hero-content flex-col lg:flex-row-reverse">
       <img src="pc2.png" class="w-2/3 md:max-w-sm rounded-lg shadow-2xl" />
@@ -6,6 +10,7 @@
         <h1 class="text-3xl sm:text-4xl font-bold leading-snug">
           Creamos las soluciones de software más
           <span class="text-primary"> innovadoras </span>
+          <span class="text-green-600">DE LA ESPE</span>
           !
         </h1>
         <p class="py-4 sm:py-6">
@@ -13,7 +18,7 @@
           tecnológicas que transforman la forma en que las empresas operan y se
           conectan con sus clientes.
         </p>
-        <button class="btn btn-primary">Contáctanos</button>
+        <a routerLink="/contact-us" class="btn btn-primary">Contáctanos</a>
       </div>
     </div>
   </div>
@@ -33,12 +38,20 @@
       Las empresas confían en nuestras soluciones
     </h3>
     <div class="card carousel carousel-vertical h-60 w-fit mx-auto">
-      <div class="carousel-item w-full h-full">
+      <a
+        target="_blank"
+        href="https://www.hogwartslegacy.com/en-us"
+        class="carousel-item w-full h-full"
+      >
         <img src="hogwarts.png" class="w-full object-fill" />
-      </div>
-      <div class="carousel-item w-full h-full">
+      </a>
+      <a
+        href="https://metrodequito.gob.ec/"
+        target="_blank"
+        class="carousel-item w-full h-full"
+      >
         <img src="metro.png" class="w-full object-fill" />
-      </div>
+      </a>
       <div class="carousel-item w-full h-full">
         <img src="2k.png" class="w-full object-fill" />
       </div>
